--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "dev": "webpack --watch --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "express": "^4.15.4",
     "nodemon": "^1.12.1",
     "webpack": "^3.6.0"
