--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --watch --progress --colors"
+    "dev": "webpack --watch --progress --colors",
+    "test": ""
   },
   "author": "",
   "license": "ISC",
